Fix empty lists being invalid in config settings
Took 32 minutes