@@ -3,16 +3,15 @@ package dev.momostudios.coldsweat.config;
 import dev.momostudios.coldsweat.api.util.Temperature;
 import dev.momostudios.coldsweat.util.math.CSMath;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.level.block.Block;
 import net.minecraftforge.common.ForgeConfigSpec;
 import net.minecraftforge.fml.ModLoadingContext;
 import net.minecraftforge.fml.config.ModConfig;
 import net.minecraftforge.fml.loading.FMLPaths;
-import net.minecraftforge.registries.ForgeRegistries;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -147,15 +146,17 @@ public class ColdSweatConfig
             hearthSpreadWhitelist = BUILDER
                     .comment("List of blocks that the hearth can spread through",
                              "Use this list if the hearth isn't spreading through particular blocks that it should")
-                    .defineList("Hearth Spread Whitelist", List.of(
+                    .defineListAllowEmpty(List.of("Hearth Spread Whitelist"), () -> List.of(
                             "minecraft:iron_bars",
                             "#minecraft:leaves"
-                    ), o -> o instanceof String);
+                    ),
+                    o -> o instanceof String);
             hearthSpreadBlacklist = BUILDER
                     .comment("List of blocks that the hearth cannot spread through",
                              "Use this list if the hearth is spreading through particular blocks that it shouldn't")
                     .defineList("Hearth Spread Blacklist", List.of(
-                    ), o -> o instanceof String);
+                    ),
+                    o -> o instanceof String);
         BUILDER.pop();
 
         BUILDER.push("Cold Soul Fire");
@@ -286,83 +287,74 @@ public class ColdSweatConfig
     /*
      * Safe set methods for config values
      */
-    public void setDifficulty(int value) {
-        difficulty.set(value);
+    public synchronized void setDifficulty(int value)
+    {   difficulty.set(value);
     }
 
-    public void setMaxHabitable(double temp) {
-        maxHabitable.set(temp);
+    public synchronized void setMaxHabitable(double temp)
+    {   maxHabitable.set(temp);
     }
 
-    public void setMinHabitable(double temp) {
-        minHabitable.set(temp);
+    public synchronized void setMinHabitable(double temp)
+    {   minHabitable.set(temp);
     }
 
-    public void setRateMultiplier(double rate) {
-        rateMultiplier.set(rate);
+    public synchronized void setRateMultiplier(double rate)
+    {   rateMultiplier.set(rate);
     }
 
-    public void setFireResistanceEnabled(boolean isEffective) {
-        fireResistanceEffect.set(isEffective);
+    public synchronized void setFireResistanceEnabled(boolean isEffective)
+    {   fireResistanceEffect.set(isEffective);
     }
 
-    public void setIceResistanceEnabled(boolean isEffective) {
-        iceResistanceEffect.set(isEffective);
+    public synchronized void setIceResistanceEnabled(boolean isEffective)
+    {   iceResistanceEffect.set(isEffective);
     }
 
-    public void setRequireThermometer(boolean required) {
-        requireThermometer.set(required);
+    public synchronized void setRequireThermometer(boolean required)
+    {   requireThermometer.set(required);
     }
 
-    public void setDamageScaling(boolean enabled) {
-        damageScaling.set(enabled);
+    public synchronized void setDamageScaling(boolean enabled)
+    {   damageScaling.set(enabled);
     }
 
-    public void setGracePeriodLength(int ticks)
-    {
-        gracePeriodLength.set(ticks);
+    public synchronized void setGracePeriodLength(int ticks)
+    {   gracePeriodLength.set(ticks);
     }
 
-    public void setGracePeriodEnabled(boolean enabled)
-    {
-        gracePeriodEnabled.set(enabled);
+    public synchronized void setGracePeriodEnabled(boolean enabled)
+    {   gracePeriodEnabled.set(enabled);
     }
 
-    public void setHeatstrokeFog(boolean fog)
-    {
-        heatstrokeFog.set(fog);
+    public synchronized void setHeatstrokeFog(boolean fog)
+    {   heatstrokeFog.set(fog);
     }
 
-    public void setFreezingHearts(boolean hearts)
-    {
-        freezingHearts.set(hearts);
+    public synchronized void setFreezingHearts(boolean hearts)
+    {   freezingHearts.set(hearts);
     }
 
-    public void setColdKnockback(boolean knockback)
-    {
-        coldKnockback.set(knockback);
+    public synchronized void setColdKnockback(boolean knockback)
+    {   coldKnockback.set(knockback);
     }
 
-    public void setColdMining(boolean mining)
-    {
-        coldMining.set(mining);
+    public synchronized void setColdMining(boolean mining)
+    {   coldMining.set(mining);
     }
 
-    public void setColdMovement(boolean movement)
-    {
-        coldMovement.set(movement);
+    public synchronized void setColdMovement(boolean movement)
+    {   coldMovement.set(movement);
     }
 
-    public void setHearthSpreadWhitelist(List<ResourceLocation> whitelist)
-    {
-        hearthSpreadWhitelist.set(whitelist.stream().map(ResourceLocation::toString).toList());
+    public synchronized void setHearthSpreadWhitelist(List<ResourceLocation> whitelist)
+    {   hearthSpreadWhitelist.set(whitelist.stream().map(ResourceLocation::toString).collect(Collectors.toList()));
     }
-    public void setHearthSpreadBlacklist(List<ResourceLocation> blacklist)
-    {
-        hearthSpreadBlacklist.set(blacklist.stream().map(ResourceLocation::toString).toList());
+    public synchronized void setHearthSpreadBlacklist(List<ResourceLocation> blacklist)
+    {   hearthSpreadBlacklist.set(blacklist.stream().map(ResourceLocation::toString).collect(Collectors.toList()));
     }
 
-    public void save() {
-        SPEC.save();
+    public void save()
+    {   SPEC.save();
     }
 }
